fixed cards center align

--- a/project-angular/src/styles.css
+++ b/project-angular/src/styles.css
@@ -15,6 +15,6 @@ ul > li {
 
 }
 .row {
-  margin-left: 0 !important;
-  margin-right: 0 !important;
+  margin-left: 0;
+  margin-right: 0;
 }
